--- a/src/app/components/add-user/add-user.component.html
+++ b/src/app/components/add-user/add-user.component.html
@@ -17,11 +17,15 @@
       <label for="add-user-email">E-mail cím</label>
       <input type="email" class="form-control" id="add-user-email" formControlName="email"
              [ngClass]="{ 'is-invalid' : addForm.get('email').invalid && addForm.get('email').touched }">
+      <div class="invalid-feedback" *ngIf="addForm.get('email').errors?.required">A mező kitöltése kötelező!</div>
+      <div class="invalid-feedback" *ngIf="addForm.get('email').errors?.email">Az e-mail cím nem valós!</div>
     </div>
     <div class="form-group">
       <label for="add-user-age">Életkor</label>
       <input type="number" class="form-control" id="add-user-age" formControlName="age"
              [ngClass]="{ 'is-invalid' : addForm.get('age').invalid && addForm.get('age').touched }">
+      <div class="invalid-feedback" *ngIf="addForm.get('age').errors?.required">A mező kitöltése kötelező!</div>
+      <div class="invalid-feedback" *ngIf="addForm.get('age').errors?.min">Túl fiatal vagy!</div>
     </div>
     <div class="form-group">
       <label for="add-user-gender">Nem</label>
