--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -19,8 +19,8 @@
       <td>{{ u.age }}</td>
       <td>{{ u.gender | gender }}</td>
       <td>
-        <button type="button" class="btn btn-warning btn-sm update-button">Módosít</button>
-        <button type="button" class="btn btn-danger btn-sm delete-button" (click)="deleteUser(u)">Töröl</button>
+        <button type="button" class="btn btn-warning btn-sm update-button" (click)="openModifyModal(u)">Módosít</button>
+        <button type="button" class="btn btn-danger btn-sm delete-button" (click)="openDeleteModal(u)">Töröl</button>
       </td>
     </tr>
     </tbody>
