2020-07-08 délután - hallgató módosítása

--- a/src/app/components/delete-modal/delete-modal.component.html
+++ b/src/app/components/delete-modal/delete-modal.component.html
@@ -5,7 +5,7 @@
   </button>
 </div>
 <div class="modal-body">
-  <p>Biztosan törölni akarod {{ user.name }} nevű hallgatót?</p>
+  <p>Biztosan törölni akarod <b class="text-danger">{{ user.name }}</b> nevű hallgatót?</p>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-outline-dark" (click)="activeModal.dismiss()">Mégsem</button>
