--- a/src/app/components/modify-modal/modify-modal.component.html
+++ b/src/app/components/modify-modal/modify-modal.component.html
@@ -5,9 +5,5 @@
   </button>
 </div>
 <div class="modal-body">
-
-</div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.dismiss()">Mégsem</button>
-  <button type="button" class="btn btn-success" (click)="activeModal.close()">Mentés</button>
+  <app-user-form [inputUser]="user" (submitUser)="modifyUser($event)"></app-user-form>
 </div>
